# treval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  compare_4modelos.html  compare_demo.html  compare_real.html  ideas-framework.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
py/: demo_agent.py  demo_react.py
py/tests/: test_agent.py  test_agent_compare.py  test_compare.py  test_dashboard.py  test_db.py  test_ejemplo.py  test_eval.py  test_gateway.py  test_instrument.py  test_replay.py  test_testing.py  test_tool.py  test_wrap_callbacks.py
py/treval/: __init__.py  agent.py  callbacks.py  cli.py  compare.py  context.py  dashboard.py  db.py  eval.py  gateway.py  instrument.py  operation.py  otel.py  replay.py  testing.py  tool.py  wrap.py
py/treval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
py/treval/templates/: agent.py  test_agent.py
