[project]
name = "treval"
version = "0.2.3"
description = "Trace, evaluate and improve AI agents from the terminal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Treval Contributors"},
]

keywords = ["ai", "agents", "observability", "tracing", "evaluation", "llm", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/amorfeu86/treval"
Repository = "https://github.com/amorfeu86/treval"
Documentation = "https://treval.dev"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
treval = "treval.cli:main"

[tool.setuptools.packages.find]
where = ["py"]

[tool.pytest.ini_options]
testpaths = ["py/tests"]
pythonpath = ["py"]